# arrow-report

./: CMakeLists.txt  README.md  compile.sh
input/: sample.parquet
src/: main.cpp  read_par.py
